<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/step_detail_scroll_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".fragments.IngredientsFragment">

        <include
            android:id="@+id/main_appBar"
            layout="@layout/app_bar_main" />

        <ProgressBar
            android:id="@+id/step_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <android.support.v7.widget.CardView
            android:id="@+id/player_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_appBar"
            android:elevation="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/colorPrimary">

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/play_no_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="No Video Available !!"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:fontFamily="serif-monospace"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/step_short_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_card"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_rectangle_bg"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step_short_des"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:padding="20dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/step_long_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/step_short_des"
                android:background="@color/colorAccent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/step_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:background="@drawable/round_button_bg"
            android:textColor="@android:color/white"
            android:layout_below="@id/card_description"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true"
            />
<Button
    android:id="@+id/step_next_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/next"
    android:layout_below="@id/card_description"
    android:background="@drawable/round_button_bg"
    android:textColor="@android:color/white"
    android:layout_marginRight="20dp"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="5dp"
    android:layout_alignParentBottom="true"
    />

    </RelativeLayout>
</ScrollView>