<resources>
    <string name="app_name">Baking App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="next">NEXT</string>
    <string name="prev">Prev</string>
    <string-array name="category">
        <item>@string/ingredients</item>
        <item>@string/steps</item>
    </string-array>
    <string name="appwidget_text">Recipe Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="servings">Servings</string>
    <string name="dialog_message">Please check your internet</string>
    <string name="ok">Okay</string>

</resources>
