<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.StepsFragment">

    <include
        android:id="@+id/main_appBar"
        layout="@layout/app_bar_main" />

    <TextView
        android:id="@+id/step_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_appBar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/steps"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_text_title"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        app:cardCornerRadius="10dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/step_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />

    </android.support.v7.widget.CardView>

</RelativeLayout>