...
        android:text="Recipe"
        android:textColor="@android:color/white"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/detail_ingre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_marginLeft="20dp"
...
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/detail_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_ingre"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
...
